# rust_postgis

./: Cargo.toml  README.md
sql/: select_all_locations.sql  select_all_timeslots.sql
sql/location/: add_location.sql  get_locations.sql  get_locations_v2.sql
sql/migrations/: 1_tableinit.sql  2_addtestdata.sql
sql/timeslot/: add_timeslot_to_location.sql  delete_timeslot.sql
src/: config.rs  db.rs  errors.rs  handlers.rs  main.rs  models.rs
src/repos/: locations.rs
